--- a/Views/CadastroContasPagar.resx
+++ b/Views/CadastroContasPagar.resx
@@ -130,4 +130,16 @@
         kwXL/GnNAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnConsultaFormaPag.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEzSURBVDhPlZPP
+        K0RhGIWvmsUs2JhoUrOQiZKdbCiRLLAV20ks7KQkFlhY2FqykfhblL+AtfxYsCRK+Tzn3nNdtzvpeupp
+        pvO+Z+ab+zXRb0IInbiEe7iFE9jh8d+4+IziBT+St+EK+73WHhZU/sJLLeMoVnAab/Ee617Pw6AL9c0X
+        OI6DOOax5r34iGeO8jBYRtHEQ8c5yHfxDauOMgj3USeo47DjHOSzKIYcZRBu4ztWHBVgtoii4SiDcDKZ
+        hSlHBZid4h0Wr1QhXuMN9jj+gWwOP3HDURGGA6gn/YA7OIM69gmqLNax25UiDPvwHPU8UnT/m6gPPcJX
+        XHClPSxUcQQbGP9mXmuostCJ1uLl/0Bp3uWUYyz3P0mhsBpXM1Y8Kg+lg6QbnrDpuDyUdO2tpBxF37zp
+        kwXL/GnNAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
